# printy

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_enable_virt_term.py  test_syntax.py
.github/workflows/: lint.yml  publish.yml  release-finalize.yml  release.yml  tests.yml
printy/: __init__.py  __main__.py  core.py  exceptions.py  flags.py  help.txt  helpme.py
printy/languages/python/: core.py  patterns.py  tests.py
printy/printy/: core.py  exceptions.py  flags.py  helpme.py
printy/syntax/: __init__.py  utils.py
printy/syntax/python/: core.py  patterns.py
tests/: tests.py  tests_core.py  tests_exceptions.py
